[BUILDINFO-646],[BUILDINFO-647] Tested the app on firefox and edge and fixed the reported and non reported bugs

--- a/src/client/app/framework/registration/activate-user/activate-user.component.scss
+++ b/src/client/app/framework/registration/activate-user/activate-user.component.scss
@@ -1,12 +1,8 @@
-@import '../../../../css/common';
+@import '../../../framework/landing-page/landing-page.component';
 
 .activate-user {
-  background-position: 0 0;
-
   .content {
-
     h5 {
-      text-align: left;
       font-size: 20px;
       background: transparent !important;
       border: 0 !important;
@@ -15,9 +11,5 @@
     p {
       margin-bottom: 20px;
     }
-  }
-
-  .inner-content {
-    padding: 15px;
   }
 }
