--- a/src/client/app/user/settings/change-email/change-email.component.scss
+++ b/src/client/app/user/settings/change-email/change-email.component.scss
@@ -8,7 +8,7 @@
     line-height: 12px;
     margin: 1px 0 0;
     position: absolute;
-    top: 53px;
+    top: 57px;
   }
 
   form {
