--- a/src/client/app/user/user-header/user-header.component.scss
+++ b/src/client/app/user/user-header/user-header.component.scss
@@ -4,6 +4,7 @@
   background: none;
   border: 0;
   height: 70px;
+  position: fixed;
 
   .cn-logo {
     cursor: pointer;
